--- a/RideFix/appsettings.json
+++ b/RideFix/appsettings.json
@@ -7,6 +7,8 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=db23170.public.databaseasp.net; Database=db23170; User Id=db23170; Password=zQ%95bC@!7dH; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+        //"DefaultConnection": "Data Source=.;Initial Catalog=RideFixLocal;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+
+        "DefaultConnection": "Server=db23733.public.databaseasp.net; Database=db23733; User Id=db23733; Password=Bf5=w-F23Dm@; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
     }
 }
