--- a/Services/Service.csproj
+++ b/Services/Service.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\ServiceAbstraction\ServiceAbstraction.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.18" />
 	<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.6" />
 
   </ItemGroup>
