--- a/RideFix/appsettings.json
+++ b/RideFix/appsettings.json
@@ -7,6 +7,19 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=db23170.public.databaseasp.net; Database=db23170; User Id=db23170; Password=zQ%95bC@!7dH; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+        "DefaultConnection": "Server=.;Database=RideFix;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    },
+    "JWT": {
+        "Key": "Welcome To our Project , RideFix. it will be No One in the world ",
+        "Issuer": "RideFixAPI",
+        "Audience": "RideFixClient"
+    },
+    "FaceRecognition": {
+        "ApiKey": "J9O6SgEsVrYWryhhaybWN8TBxat6OiJg",
+        "ApiSecret": "L67IaiOAk6YyoCx7iORbJRETNDKTW1lt",
+        "ApiUrl": "https://api-us.faceplusplus.com/facepp/v3/compare"
     }
+
+
+
 }
