--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ServiceAbstraction\ServiceAbstraction.csproj" />
+    <ProjectReference Include="..\Presistence\Presistence.csproj" />
   </ItemGroup>
 
 </Project>
