--- a/Presistence/Presistence.csproj
+++ b/Presistence/Presistence.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\ServiceAbstraction\ServiceAbstraction.csproj" />
     <ProjectReference Include="..\Services\Service.csproj" />
+
+	  
+	  <ProjectReference Include="..\Services\Service.csproj" />
+
   </ItemGroup>
 
   <ItemGroup>
