--- a/RideFix/RideFix.csproj
+++ b/RideFix/RideFix.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -17,10 +17,14 @@
   <ItemGroup>
     <ProjectReference Include="..\Presentation\Presentation.csproj" />
     <ProjectReference Include="..\Presistence\Presistence.csproj" />
+    <ProjectReference Include="..\ServiceAbstraction\ServiceAbstraction.csproj" />
+    <ProjectReference Include="..\Services\Service.csproj" />
+
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="wwwroot\Faces\" />
+    <Folder Include="wwwroot\Identity\" />
   </ItemGroup>
 
 </Project>
