--- a/ServiceAbstraction/ServiceAbstraction.csproj
+++ b/ServiceAbstraction/ServiceAbstraction.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.18" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Shared\SharedData.csproj" />
   </ItemGroup>
 
