--- a/RideFix/appsettings.json
+++ b/RideFix/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=.;Database=RideFix;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=db23733.public.databaseasp.net; Database=db23733; User Id=db23733; Password=Bf5=w-F23Dm@; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
     },
     "JWT": {
         "Key": "Welcome To our Project , RideFix. it will be No One in the world ",
